fixed overflow

--- a/src/routes/about/style.css
+++ b/src/routes/about/style.css
@@ -76,6 +76,10 @@
   z-index:2;
 }
 
+.width {
+  max-width: 100vw;
+}
+
 @media screen and (max-width: 890px) {
 
   .aboutContent {
